--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ requires-python = ">=3.10"
 dependencies = [
     "streamlit>=1.28.0",
     "streamlit-webrtc",
-    "opencv-python",
+    "opencv-python-headless",
     "av",
     "facenet-pytorch",
     "torch"
